ui changes again

--- a/app/globals.css
+++ b/app/globals.css
@@ -202,6 +202,16 @@ body {
     bottom: 0; /* Ensures the map is at the bottom of the section */
   }
 
+  .downl-map {
+    @apply absolute w-full h-full bg-contacttop-bg bg-cover bg-bottom bg-opacity-50 z-0;
+    top: 0; /* Ensures the map is at the bottom of the section */
+  }
+
+  .team-map3 {
+    @apply absolute w-full h-full bg-contactbottom-bg bg-cover bg-bottom bg-opacity-50 z-0;
+    bottom: 0; /* Ensures the map is at the bottom of the section */
+  }
+
   .vid-map {
     @apply relative w-full h-full bg-vid-shadow bg-cover bg-bottom bg-opacity-50 z-0;
     bottom: 0; /* Ensures the map is at the bottom of the section */
@@ -218,6 +228,11 @@ body {
   }
   .contact-map {
     @apply absolute w-full h-full bg-side-blob bg-cover bg-top bg-opacity-50 z-0;
+    top: 0; /* Ensures the map is at the bottom of the section */
+  }
+
+  .neon-map {
+    @apply absolute w-full h-full bg-neon-bg bg-cover bg-top bg-opacity-50 z-0;
     top: 0; /* Ensures the map is at the bottom of the section */
   }
 
